--- a/source/less/components/main_nav.less
+++ b/source/less/components/main_nav.less
@@ -32,7 +32,7 @@
   padding: 0;
 
   &:active {
-    background-color: @base-secondary;
+    background-color: @secondary;
   }
 
   @media (min-width: @tablet-width) {
@@ -41,7 +41,7 @@
 }
 
 .main-nav__item {
-  border-top: 1px solid @light-grey;
+  border-top: 1px solid @lightgrey;
 
   @media (min-width: @tablet-width) {
     border: none;
@@ -58,17 +58,17 @@
   font-weight: 500;
   font-size: 12px;
   line-height: 16px;
-  color: @base-black;
+  color: @black;
   text-transform: uppercase;
   text-decoration: none;
   padding: 20px;
 
   &:hover {
-    color: @base-primary;
+    color: @primary;
   }
 
   &:active {
-    background-color: @base-secondary;
+    background-color: @secondary;
   }
 
   @media (min-width: @tablet-width) {
@@ -78,7 +78,7 @@
 
 .main-nav__link--current {
   @media (min-width: @tablet-width) {
-    color: @base-primary;
-    border-bottom: 2px solid @base-primary;
+    color: @primary;
+    border-bottom: 2px solid @primary;
   }
 }
