--- a/source/less/components/user_menu.less
+++ b/source/less/components/user_menu.less
@@ -25,19 +25,19 @@
   line-height: 16px;
   text-transform: uppercase;
   text-decoration: none;
-  color: @base-black;
+  color: @black;
   padding: 20px 22px;
 
   &:hover {
-    color: @base-primary;
+    color: @primary;
   }
 
   &:hover path {
-    fill: @base-primary;
+    fill: @primary;
   }
 
   &:active {
-    background-color: @base-secondary;
+    background-color: @secondary;
   }
 
   @media (min-width: @tablet-width) {
@@ -46,7 +46,7 @@
   }
 }
 
-.user-menu__item span {
+.user-menu__item-span {
   display: none;
 
   @media (min-width: @desktop-width) {
