--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,19 +1,17 @@
-//colors
-@import "./global/colors.less";
+@import url("variables.less");
+@import url("fonts.less");
+@import url("global.less");
+@import url("colors.less");
 
-//fonts
-@import "./global/fonts.less";
-
-//global
-@import "./global/global.less";
-
-//variables
-@import "./global/variables.less";
-
-
-//header
-@import "./blocks/header.less";
-@import "./blocks/main_nav.less";
-@import "./blocks/user_menu.less";
-
-
+@import url("global/global.less");
+@import url("components/footer.less");
+@import url("components/swiper.less");
+@import url("components/catalog.less");
+@import url("components/main_nav.less");
+@import url("components/advantages.less");
+@import url("components/header.less");
+@import url("components/filter.less");
+@import url("components/user_menu.less");
+@import url("components/cards.less");
+@import url("components/pagination.less");
+@import url("components/location.less");
