--- a/source/less/components/filter.less
+++ b/source/less/components/filter.less
@@ -1,5 +1,5 @@
 .filter {
-  margin-bottom: 36px;
+  margin-bottom: 41px;
 
   @media (min-width: @tablet-width) {
     margin-bottom: 40px;
@@ -11,7 +11,7 @@
   margin: 0 auto;
 
   @media (min-width: @tablet-width) {
-    width: 90%;
+    width: 100%;
   }
 }
 
@@ -31,6 +31,8 @@
 }
 
 .filter__price {
+  border: none;
+
   @media (min-width: @tablet-width) {
     width: 223px;
   }
@@ -171,6 +173,7 @@
 }
 
 .filter__milk {
+  border: none;
   padding-bottom: 4px;
 
   @media (min-width: @tablet-width) {
@@ -261,6 +264,7 @@
 }
 
 .filter__country {
+  border: none;
   padding-bottom: 10px;
 
   @media (min-width: @tablet-width) {
