--- a/source/less/components/header.less
+++ b/source/less/components/header.less
@@ -10,7 +10,6 @@
 
   @media (min-width: @desktop-width) {
     padding: 0 40px;
-    justify-content: space-between;
   }
 }
 
@@ -27,7 +26,7 @@
   }
 
   @media (min-width: @desktop-width) {
-    margin: 0;
+    margin-right: 22px
   }
 }
 
@@ -39,7 +38,18 @@
   }
 
   @media (min-width: @desktop-width) {
-    margin: 0 8px;
+    margin: 0;
+  }
+}
+
+.header__text {
+  display: none;
+
+  @media (min-width: @desktop-width) {
+    display: block;
+    width: 126px;
+    font-size: 13px;
+    line-height: 16px;
   }
 }
 
