--- a/source/less/style.less
+++ b/source/less/style.less
@@ -8,10 +8,13 @@
 @import url("components/swiper.less");
 @import url("components/catalog.less");
 @import url("components/main_nav.less");
+@import url("components/map.less");
 @import url("components/advantages.less");
 @import url("components/header.less");
 @import url("components/filter.less");
 @import url("components/user_menu.less");
 @import url("components/cards.less");
 @import url("components/pagination.less");
+@import url("components/sorting.less");
 @import url("components/location.less");
+@import url("components/mixin.less");
