--- a/source/less/components/advantages.less
+++ b/source/less/components/advantages.less
@@ -1,12 +1,13 @@
 .advantages {
-  padding: 50px 20px 28px;
-
-  @media (min-width: @tablet-width) {
-    padding: 60px 30px 50px;
-  }
-
   @media (min-width: @desktop-width) {
-    padding: 100px 40px 70px;
+    margin-bottom: 83px;
+  }
+}
+
+.advantages__wrapper {
+  margin-bottom: 59px;
+  @media (min-width: @tablet-width) {
+    margin-bottom: 82px;
   }
 }
 
@@ -39,7 +40,7 @@
   margin: 0;
 
   @media (min-width: @tablet-width) {
-    font-size: 42px;
+    font-size: 46px;
     line-height: 64px;
   }
 }
@@ -76,7 +77,7 @@
   }
 
   @media (min-width: @desktop-width) {
-    width: 318px;
+    width: 340px;
     text-align: center;
     padding: 76px 0 0 0;
   }
@@ -162,58 +163,5 @@
 
   @media (min-width: @desktop-width) {
     display: none;
-  }
-}
-
-
-
-
-
-.contacts__map-image{
-  position: absolute;
-  display: block;
-  border: 0;
-  width: 100%;
-  height: 362px;
-  bottom: 0;
-  right: 0;
-
-  @media (min-width: @tablet-width){
-    min-height: 400px;
-    }
-}
-
-.contacts__map {
-  position: relative;
-  height: 362px;
-
-  @media (min-width: @tablet-width) {
-    height: 400px;
-  }
-}
-
-.contacts__map::before {
-  content: "";
-  width: 57px;
-  height: 53px;
-  background-image: url(../../img/mappin.svg);
-  background-repeat: no-repeat;
-  position: absolute;
-  right: 40%;
-  top: 137px;
-  z-index: 3;
-
-  @media (min-width: @tablet-width){
-    background-image: url(../../img/mappin.svg);
-    width: 113px;
-    height: 106px;
-    top: 146px;
-    right: 42%;
-    position: absolute;
-
-  }
-  @media (min-width: @desktop-width){
-    right: 29%;
-    top: 141px;
   }
 }
