--- a/source/less/components/catalog.less
+++ b/source/less/components/catalog.less
@@ -2,17 +2,17 @@
   background-color: @greybg;
   padding: 20px 20px 60px;
 
-  @media (min-width: @tablet-width) {
-    padding-top: 48px;
-    padding-bottom: 100px;
-  }
-
   @media (min-width: @desktop-width) {
-    padding: 30px 40px 120px;
+    padding: 30px 40px 118px;
   }
 }
 
 .catalog__wrapper {
+
+  @media (min-width: @tablet-width) {
+    margin-bottom: 30px;
+  }
+
   @media (min-width: @desktop-width) {
     display: flex;
     flex-wrap: wrap;
@@ -33,7 +33,7 @@
   }
 }
 
-.advantages__p {
+.catalog__p {
   font-family: "Montserrat Bold", "Arial Black", sans-serif;
   font-size: 12px;
   line-height: 16px;
@@ -43,14 +43,13 @@
 }
 
 .catalog__title {
-  font-family: "Montserrat Bold", "Arial Black", sans-serif;
   font-size: 24px;
   line-height: 36px;
   color: @black;
   margin: 0;
 
   @media (min-width: @tablet-width) {
-    font-size: 42px;
+    font-size: 46px;
     line-height: 64px;
   }
 }
