--- a/source/less/components/main_nav.less
+++ b/source/less/components/main_nav.less
@@ -4,7 +4,7 @@
   }
 
   @media (min-width: @desktop-width) {
-    margin: 0;
+    margin-left: 144px;
   }
 }
 
@@ -48,7 +48,7 @@
   }
 
   @media (min-width: @desktop-width) {
-    margin: 0 10px;
+    margin: 0 11px;
   }
 }
 
