--- a/source/less/components/swiper.less
+++ b/source/less/components/swiper.less
@@ -1,10 +1,15 @@
+.swiper {
+  max-width: 1440px;
+}
+
 .swiper__wrapper {
   width: 100vw;
-  min-width: 320px;
+  min-width: 100%;
   height: fit-content;
+  margin-bottom: 49px;
 
   @media (min-width: @tablet-width) {
-    padding-bottom: 188px;
+    padding-bottom: 141px;
   }
 
   @media (min-width: @desktop-width) {
@@ -62,7 +67,7 @@
   }
 
   @media (min-width: @desktop-width) {
-    padding: 180px 80px 241px 735px;
+    padding: 180px 80px 209px 735px;
     text-align: left;
   }
 }
@@ -86,13 +91,14 @@
   letter-spacing: 1px;
 
   @media (min-width: @tablet-width) {
-    font-size: 56px;
+    font-size: 60px;
     line-height: 80px;
     margin-bottom: 16px;
   }
 
   @media (min-width: @desktop-width) {
     padding: 0;
+    font-size: 60px;
   }
 }
 
@@ -103,7 +109,7 @@
   margin: 0 0 20px 0;
 
   @media (min-width: @tablet-width) {
-    font-size: 20px;
+    font-size: 22px;
     line-height: 32px;
     padding: 0 10px;
   }
@@ -111,6 +117,7 @@
   @media (min-width: @desktop-width) {
     padding: 0 20px 0 0;
     margin-bottom: 40px;
+    font-size: 22px;
   }
 }
 
@@ -136,7 +143,7 @@
   font-weight: 400;
   font-size: 16px;
   line-height: 32px;
-  margin-right: 6px;
+  margin-right: 12px;
 }
 
 .swiper__price-button {
@@ -146,7 +153,7 @@
   background-color: @primary;
   border: none;
   border-radius: 4px;
-  padding: 8px 20px;
+  padding: 8px 24px;
   cursor: pointer;
 }
 
@@ -247,6 +254,14 @@
 }
 
 .swiper-container {
-  margin: 0 auto;
-  max-width: 1400px;
+
+    @media (min-width: @tablet-width) {
+      margin-bottom: 25px;
+    }
+
+    @media (min-width: @desktop-width) {
+    margin-bottom: 50px;
+    background-color: @flatwhitebg;
+
+  }
 }
